--- a/VidCoder/Themes/HighContrast.xaml
+++ b/VidCoder/Themes/HighContrast.xaml
@@ -31,7 +31,11 @@
 	<SolidColorBrush x:Key="LogErrorBrush" Color="{x:Static SystemColors.WindowTextColor}" />
 	<SolidColorBrush x:Key="LogVidCoderBrush" Color="{x:Static SystemColors.WindowTextColor}" />
 	<SolidColorBrush x:Key="LogVidCoderWorkerBrush" Color="{x:Static SystemColors.WindowTextColor}" />
-	
+	<SolidColorBrush x:Key="ProgressBarBrush" Color="{x:Static SystemColors.HighlightColor}" />
+	<SolidColorBrush x:Key="ProgressBarPausedBrush" Color="{x:Static SystemColors.HighlightColor}" />
+	<SolidColorBrush x:Key="DismissableMessageBrush" Color="{x:Static SystemColors.WindowColor}" />
+	<SolidColorBrush x:Key="HighlightTextBrush" Color="{x:Static SystemColors.HighlightTextColor}" />
+
 
 	<SolidColorBrush x:Key="Button.Static.Background" Color="{x:Static SystemColors.ControlColor}"/>
 	<SolidColorBrush x:Key="Button.Static.Border" Color="{x:Static SystemColors.ControlDarkColor}"/>
