--- a/VidCoder/View/ChapterMarkersDialog.xaml
+++ b/VidCoder/View/ChapterMarkersDialog.xaml
@@ -1,127 +1,135 @@
 ﻿<Window
-    x:Class="VidCoder.View.ChapterMarkersDialog"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:prop="clr-namespace:VidCoder.Properties"
-    xmlns:res="clr-namespace:VidCoder.Resources"
-    Title="{x:Static res:ChapterMarkersRes.ChapterMarkersDialogTitle}"
-    Width="444"
-    Height="326"
-    Closed="Window_Closed"
-    Style="{StaticResource NormalWindow}"
-    TextOptions.TextFormattingMode="Display"
-    WindowStartupLocation="CenterOwner">
-    <Window.Resources>
-        <DataTemplate x:Key="TitleTemplate">
-            <TextBox
-                Width="200"
-                GotFocus="TitleBoxGotFocus"
-                Text="{Binding Title}" />
-        </DataTemplate>
-        <Style x:Key="ChapterListItem" TargetType="ListViewItem">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type ListViewItem}">
-                        <Grid Margin="0 1 0 1">
-                            <Grid.RowDefinitions>
-                                <RowDefinition MaxHeight="11" />
-                                <RowDefinition />
-                            </Grid.RowDefinitions>
+	x:Class="VidCoder.View.ChapterMarkersDialog"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:prop="clr-namespace:VidCoder.Properties"
+	xmlns:res="clr-namespace:VidCoder.Resources"
+	Title="{x:Static res:ChapterMarkersRes.ChapterMarkersDialogTitle}"
+	Width="444"
+	Height="326"
+	Closed="Window_Closed"
+	Style="{StaticResource NormalWindow}"
+	TextOptions.TextFormattingMode="Display"
+	WindowStartupLocation="CenterOwner">
+	<Window.Resources>
+		<DataTemplate x:Key="TitleTemplate">
+			<TextBox
+				Width="200"
+				GotFocus="TitleBoxGotFocus"
+				Text="{Binding Title}" />
+		</DataTemplate>
+		<Style x:Key="ChapterListItem" TargetType="ListViewItem">
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="{x:Type ListViewItem}">
+						<Grid Margin="0 1 0 1">
+							<Grid.RowDefinitions>
+								<RowDefinition MaxHeight="11" />
+								<RowDefinition />
+							</Grid.RowDefinitions>
 
-                            <Rectangle
-                                Name="UpperHighlight"
-                                Fill="#75FFFFFF"
-                                Visibility="Collapsed" />
-                            <GridViewRowPresenter
-                                Grid.RowSpan="2"
-                                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
-                        </Grid>
+							<Rectangle
+								Name="UpperHighlight"
+								Fill="#75FFFFFF"
+								Visibility="Collapsed" />
+							<GridViewRowPresenter
+								Grid.RowSpan="2"
+								VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+								SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+						</Grid>
 
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsEnabled" Value="False">
-                                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Setter Property="IsTabStop" Value="False" />
-        </Style>
-    </Window.Resources>
-    <Grid>
-        <RadioButton
-            Height="16"
-            Margin="12 12 0 0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Content="{x:Static res:ChapterMarkersRes.DefaultChapterNamesRadioButton}"
-            GroupName="UseDefault1"
-            IsChecked="{Binding UseDefaultNames}" />
-        <RadioButton
-            Height="16"
-            Margin="12 34 0 0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Content="{x:Static res:ChapterMarkersRes.CustomChapterNamesRadioButton}"
-            GroupName="UseDefault2"
-            IsChecked="{Binding UseDefaultNames,
-                                Converter={StaticResource InverseBoolConverter}}" />
-        <Button
-            Height="23"
-            MinWidth="108"
-            Margin="0 27 12 0"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Top"
-            Command="{Binding ImportCsvFile}"
-            Content="{x:Static res:ChapterMarkersRes.ImportFromCsvButton}"
-            Padding="5 0" />
-        <ListView
-            Margin="12 56 12 35"
-            IsEnabled="{Binding UseDefaultNames,
-                                Converter={StaticResource InverseBoolConverter},
-                                Mode=OneWay}"
-            ItemContainerStyle="{StaticResource ChapterListItem}"
-            ItemsSource="{Binding ChapterNames}"
-            KeyboardNavigation.TabNavigation="Continue">
-            <ListView.View>
-                <GridView>
-                    <GridView.Columns>
-                        <GridViewColumn
-                            Width="54"
-                            DisplayMemberBinding="{Binding Number}"
-                            Header="{x:Static res:ChapterMarkersRes.NumberColumn}" />
-                        <GridViewColumn
-                            Width="65"
-                            DisplayMemberBinding="{Binding StartTime}"
-                            Header="{x:Static res:ChapterMarkersRes.StartTimeColumn}" />
-                        <GridViewColumn CellTemplate="{StaticResource TitleTemplate}" Header="{x:Static res:ChapterMarkersRes.TitleColumn}" />
-                    </GridView.Columns>
-                </GridView>
-            </ListView.View>
-        </ListView>
-        <StackPanel
-            Margin="0 0 6 6"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Bottom"
-            Orientation="Horizontal">
-            <Button
-                Height="23"
-                MinWidth="75"
-                Margin="0 0 6 0"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Bottom"
-                Command="{Binding Accept}"
-                Content="{x:Static res:CommonRes.Ok}"
-                IsDefault="True" />
-            <Button
-                Height="23"
-                MinWidth="75"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Bottom"
-                Command="{Binding Cancel}"
-                Content="{x:Static res:CommonRes.Cancel}"
-                IsCancel="True" />
-        </StackPanel>
-    </Grid>
+						<ControlTemplate.Triggers>
+							<Trigger Property="IsEnabled" Value="False">
+								<Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
+							</Trigger>
+						</ControlTemplate.Triggers>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+			<Setter Property="IsTabStop" Value="False" />
+		</Style>
+	</Window.Resources>
+	<Grid>
+		<RadioButton
+			Height="16"
+			Margin="12 12 0 0"
+			HorizontalAlignment="Left"
+			VerticalAlignment="Top"
+			Content="{x:Static res:ChapterMarkersRes.DefaultChapterNamesRadioButton}"
+			GroupName="UseDefault1"
+			IsChecked="{Binding UseDefaultNames}" />
+		<RadioButton
+			Height="16"
+			Margin="12 34 0 0"
+			HorizontalAlignment="Left"
+			VerticalAlignment="Top"
+			Content="{x:Static res:ChapterMarkersRes.CustomChapterNamesRadioButton}"
+			GroupName="UseDefault2"
+			IsChecked="{Binding UseDefaultNames,
+			                    Converter={StaticResource InverseBoolConverter}}" />
+		<Button
+			Height="23"
+			MinWidth="108"
+			Margin="0 27 12 0"
+			Padding="5 0"
+			HorizontalAlignment="Right"
+			VerticalAlignment="Top"
+			Command="{Binding ImportCsvFile}"
+			Content="{x:Static res:ChapterMarkersRes.ImportFromCsvButton}" />
+		<ListView
+			Margin="12 56 12 35"
+			Background="{DynamicResource WindowBrush}"
+			IsEnabled="{Binding UseDefaultNames,
+			                    Converter={StaticResource InverseBoolConverter},
+			                    Mode=OneWay}"
+			ItemContainerStyle="{StaticResource ChapterListItem}"
+			ItemsSource="{Binding ChapterNames}"
+			KeyboardNavigation.TabNavigation="Continue"
+			Style="{StaticResource ListViewBaseStyle}">
+			<ListView.View>
+				<GridView>
+					<GridView.Columns>
+						<GridViewColumn Width="54" Header="{x:Static res:ChapterMarkersRes.NumberColumn}">
+							<GridViewColumn.CellTemplate>
+								<DataTemplate>
+									<TextBlock Style="{StaticResource TextBlockBaseStyle}" Text="{Binding Number}" />
+								</DataTemplate>
+							</GridViewColumn.CellTemplate>
+						</GridViewColumn>
+						<GridViewColumn Width="65" Header="{x:Static res:ChapterMarkersRes.StartTimeColumn}">
+							<GridViewColumn.CellTemplate>
+								<DataTemplate>
+									<TextBlock Style="{StaticResource TextBlockBaseStyle}" Text="{Binding StartTime}" />
+								</DataTemplate>
+							</GridViewColumn.CellTemplate>
+						</GridViewColumn>
+						<GridViewColumn CellTemplate="{StaticResource TitleTemplate}" Header="{x:Static res:ChapterMarkersRes.TitleColumn}" />
+					</GridView.Columns>
+				</GridView>
+			</ListView.View>
+		</ListView>
+		<StackPanel
+			Margin="0 0 6 6"
+			HorizontalAlignment="Right"
+			VerticalAlignment="Bottom"
+			Orientation="Horizontal">
+			<Button
+				Height="23"
+				MinWidth="75"
+				Margin="0 0 6 0"
+				HorizontalAlignment="Right"
+				VerticalAlignment="Bottom"
+				Command="{Binding Accept}"
+				Content="{x:Static res:CommonRes.Ok}"
+				IsDefault="True" />
+			<Button
+				Height="23"
+				MinWidth="75"
+				HorizontalAlignment="Right"
+				VerticalAlignment="Bottom"
+				Command="{Binding Cancel}"
+				Content="{x:Static res:CommonRes.Cancel}"
+				IsCancel="True" />
+		</StackPanel>
+	</Grid>
 </Window>
