--- a/VidCoder/View/EncodeDetailsWindow.xaml
+++ b/VidCoder/View/EncodeDetailsWindow.xaml
@@ -21,7 +21,8 @@
 		</Style>
 		<Style x:Key="EncodeDetailsProgress" TargetType="ProgressBar">
 			<Setter Property="Margin" Value="0 0 10 0" />
-			<Setter Property="Foreground" Value="{StaticResource ProgressBarBrush}" />
+			<Setter Property="Foreground" Value="{DynamicResource ProgressBarBrush}" />
+			<Setter Property="Background" Value="{DynamicResource WindowBrush}" />
 		</Style>
 	</Window.Resources>
 	<ScrollViewer VerticalScrollBarVisibility="Auto">
