--- a/VidCoder/View/Panels/SizingPanel.xaml
+++ b/VidCoder/View/Panels/SizingPanel.xaml
@@ -420,14 +420,12 @@
 					Visibility="{Binding PadColorEnabled,
 					                     Converter={StaticResource VisibilityConverter}}">
 					<TextBlock VerticalAlignment="Center" Text="{x:Static res:EncodingRes.PadColorLabel}" />
-					<Border
+					<Grid
 						Width="20"
 						Height="20"
 						Margin="8 0 0 0"
 						VerticalAlignment="Center"
 						Background="{Binding PadBrush}"
-						BorderBrush="#808080"
-						BorderThickness="1"
 						SnapsToDevicePixels="True" />
 
 					<Button
