Fixed crash on SRT subtitle. Fixed inaccurate progress when adding a queue item while encoding.

--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -1287,7 +1287,7 @@
 						<Grid.Resources>
 							<Style x:Key="SubtitleControl" TargetType="{x:Type FrameworkElement}">
 								<Setter Property="Margin" Value="4 0 4 2" />
-								<Setter Property="HorizontalAlignment" Value="CenBter" />
+								<Setter Property="HorizontalAlignment" Value="Center" />
 							</Style>
 
 							<DataTemplate x:Key="SourceDragTemplate">
