--- a/VidCoder/View/EncodingWindow.xaml
+++ b/VidCoder/View/EncodingWindow.xaml
@@ -94,9 +94,9 @@
 				VerticalAlignment="Top"
 				UseLayoutRounding="True">
 				<ToolBar
+					Background="{DynamicResource ToolBarBackgroundBrush}"
 					KeyboardNavigation.TabNavigation="Continue"
 					Loaded="ToolBar_Loaded"
-					Background="{DynamicResource ToolBarBackgroundBrush}"
 					ToolBarTray.IsLocked="True">
 					<Button
 						Height="24"
@@ -150,6 +150,14 @@
 						Command="{Binding Rename}"
 						Content="{x:Static res:EncodingRes.Rename}"
 						Visibility="{Binding SaveRenameButtonsVisible,
+						                     Converter={StaticResource VisibilityConverter}}" />
+					<Button
+						Height="24"
+						MinWidth="70"
+						Padding="5 0"
+						Command="{Binding ProcessingService.ApplyCurrentPresetToQueue}"
+						Content="{x:Static res:EncodingRes.ApplyToQueueButton}"
+						Visibility="{Binding ProcessingService.ShowApplyToQueueButton,
 						                     Converter={StaticResource VisibilityConverter}}" />
 					<Button
 						Height="24"
