--- a/VidCoder/View/OptionsDialog.xaml
+++ b/VidCoder/View/OptionsDialog.xaml
@@ -75,7 +75,7 @@
 						                     ConverterParameter=0}">
 
 						<!--  Languages  -->
-						<TextBlock Style="{StaticResource ConfigSectionHeader}" Text="{x:Static res:OptionsRes.LanguagesSection}" />
+						<TextBlock Style="{StaticResource ConfigSectionHeader}" Text="{x:Static res:OptionsRes.GeneralSection}" />
 						<StackPanel Style="{StaticResource ConfigSectionStack}">
 							<StackPanel Orientation="Horizontal">
 								<TextBlock VerticalAlignment="Center" Text="{x:Static res:OptionsRes.InterfaceLanguageLabel}" />
@@ -85,6 +85,15 @@
 									Margin="6 0 0 0"
 									ItemsSource="{Binding LanguageChoices}"
 									SelectedItem="{Binding InterfaceLanguage}" />
+							</StackPanel>
+							<StackPanel Margin="0 6 0 0" Orientation="Horizontal">
+								<TextBlock VerticalAlignment="Center" Text="{x:Static res:OptionsRes.ThemeLabel}" />
+								<ComboBox
+									Height="23"
+									MinWidth="100"
+									Margin="6 0 0 0"
+									ItemsSource="{Binding AppThemeChoices}"
+									SelectedItem="{Binding AppTheme}" />
 							</StackPanel>
 						</StackPanel>
 
