--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,8 @@
   {%else%}
     <meta name="keywords" content="{{ site.keywords }}">
   {% endif %}
-    
+  <meta property="fb:pages" content="987249064671408,312102282228377">
+	
   <link href="{{ site.baseurl }}/css/main.css" media="screen, projection" rel="stylesheet" type="text/css">
   <link rel="canonical" href="{{ site.baseurl }}{{ page.url }}">
   <link href="{{ site.baseurl }}/favicon.ico" rel="icon">
