Prevented direct drag and drop queue column reorder since the new ordering would not be preserved.

--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -1825,7 +1825,7 @@
 										</Style>
 									</ListView.ItemContainerStyle>
 									<ListView.View>
-										<GridView x:Name="queueGridView">
+										<GridView x:Name="queueGridView" AllowsColumnReorder="False">
 											<GridView.Columns>
 												<GridViewColumn Width="75" CellTemplate="{StaticResource QueueRemoveTemplate}" />
 											</GridView.Columns>
