--- a/VidCoder/View/PickerWindow.xaml
+++ b/VidCoder/View/PickerWindow.xaml
@@ -3,6 +3,8 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:controls="clr-namespace:VidCoder.Controls"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:model="clr-namespace:VidCoder.Model"
 	xmlns:res="clr-namespace:VidCoder.Resources"
 	xmlns:vidCoder="clr-namespace:VidCoder"
@@ -12,9 +14,11 @@
 	Height="450"
 	MinWidth="450"
 	MinHeight="300"
+	d:DataContext="{d:DesignInstance viewModel:PickerWindowViewModel}"
 	Closing="PickerWindow_OnClosing"
 	ShowInTaskbar="False"
-	WindowStyle="ToolWindow">
+	WindowStyle="ToolWindow"
+	mc:Ignorable="d">
 	<Grid>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition
@@ -233,6 +237,22 @@
 							TextWrapping="Wrap"
 							Visibility="{Binding NameFormatOverrideEnabled,
 							                     Converter={StaticResource VisibilityConverter}}" />
+
+						<StackPanel Margin="0 10 0 0" Orientation="Horizontal">
+							<TextBlock
+								Name="titleCaptializationLabel"
+								VerticalAlignment="Center"
+								Text="{x:Static res:PickerRes.TitleCaptializationLabel}" />
+							<ComboBox
+								MinWidth="100"
+								Margin="6 0 0 0"
+								HorizontalAlignment="Left"
+								AutomationProperties.LabeledBy="{Binding ElementName=titleCaptializationLabel}"
+								ItemsSource="{Binding TitleCaptializationChoices}"
+								SelectedValue="{Binding TitleCapitalization}"
+								SelectedValuePath="Value" />
+						</StackPanel>
+
 						<CheckBox
 							Height="16"
 							Margin="0 6 0 0"
